# marianne

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  README.md  index.html  pyproject.toml  setup.cfg  sitemap.xml  undownload.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/models/: spam_detect.ipynb
docs/docs/slides/: overview.md
docs/theme/: reveal.html
docs/theme/reveal.js/: README.md
instance/data/: spam_and_ham_text.csv
marianne/: __init__.py  __main__.py  cli.py  crawler.py  db.py  features.py  model.py  search.py
marianne/imagesearch/: __init__.py  descriptor.py  searcher.py
marianne/schema/: metadata.sql
marianne/static/: main.css  main.js
marianne/templates/: about.html  base.html  index.html  query.html  query_image.html  query_image_ok.html  submit.html
models/spam_detect/: index.html
search/: search_index.json
slides/overview/: index.html
src/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_marianne.py
utils/: unsplash_download.py
