[project]
name = "marianne"
version = "0.1.0"
description = "marianne - the best assistant, always high five"
authors = [
    {name = "Chojan Shang", email = "psiace@outlook.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT OR APACHE-2.0"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
